[package]
name = "davis-edi-rs"
version = "0.2.1"
edition = "2021"
authors = ["Andrew C. Freeman"]
description = "A fast, Rust-based, open-source implementation of the paper \"Bringing a Blurry Frame Alive at High Frame-Rate with an Event Camera\" (2019) by Pan et al."
homepage = "https://github.com/ac-freeman/davis-EDI-rs"
repository = "https://github.com/ac-freeman/davis-EDI-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["neuromorphic", "decoding", "davis", "dvs", "aedat"]
categories = ["multimedia::encoding", "science"]
exclude = ["dataset", "**/*.gif"]

[dependencies]
opencv = "0.66.0"
clap = { version = "4.0.17", features = ["derive"] }
rayon = "1.5"
toml = "0.5.8"
aedat = "1.3.1"
#aedat = {path = "../aedat-rs"}
serde = {version = "1.0.136", features = ["derive"]}
simple-error = "0.2.3"
thiserror = "1.0.38"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.11"
nalgebra = "0.31.1"
byteorder = "1.4.3"
tokio = { version = "1.21.1", features = ["full"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
async-scoped = { version = "0.7.0", features = ["use-tokio"] }
async-trait = "0.1.57"


[dependencies.cv-convert]
version = '0.20.0'
features = [
    'opencv_0-66',
    'nalgebra_0-31'
]

# For debugging aedat-rs usage
#[profile.dev.package."*"]
## Set the default for dependencies in Development mode.
#opt-level = 0

[profile.release]
lto = true